# enterprise-telegram-bot-rust

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: domain.rs  lib.rs  main.rs
src/adapters/: telegram.rs
src/adapters/telegram/: callbacks.rs  commands.rs  error.rs  handlers.rs  router.rs  views.rs
src/adapters/telegram/handlers/: callback.rs  command.rs  menu.rs  message.rs  state.rs
src/application/: error.rs  usecases.rs
src/application/usecases/: commands.rs  queries.rs
src/application/usecases/commands/: register_user.rs  start_trial.rs
src/application/usecases/queries/: get_menu_state.rs  get_user.rs
src/domain/: error.rs  subscription.rs  user.rs
src/domain/subscription/: entity.rs  repository.rs  value_objects.rs
src/domain/uow/: repository.rs
src/domain/user/: entity.rs  repository.rs  value_objects.rs
src/infrastructure/: config.rs  database.rs
src/infrastructure/database/: mappers.rs  models.rs  postgres.rs  subscription_repository.rs  uow.rs  user_repository.rs
